--- a/web/css/style.css
+++ b/web/css/style.css
@@ -7,7 +7,7 @@ body, html {
 body {
     margin-top: 3em;
     font-family: 'Raleway',sans-serif;
-    background-image: url(../img/ban.png);
+   /*background-image: url(../img/ban.png);*/
     background-size: cover;
 }
 #menu {
